scroll fix
-list no longer overflows off screen on y axis

--- a/css/css/styles.css
+++ b/css/css/styles.css
@@ -48,11 +48,11 @@ body{
 .list-group{
     position: relative;
     list-style-type: none;
-    overflow-y: scroll;
     padding-top: 5px;
     margin: 0;
-    height: 100vh;
+    height: 90vh;
     width: auto;
+    overflow: auto;
 }
 img{
     height: 200px;
